color contrast fix

--- a/styles/form.css
+++ b/styles/form.css
@@ -126,7 +126,7 @@ label span {
 }
 
 small {
-    color: #4949fa;
+    color: #0000ee;
     font-size: 0.7rem;
 }
 
